--- a/admin/index.html
+++ b/admin/index.html
@@ -7,6 +7,13 @@
     <title>Content Manager</title>
   </head>
   <body>
+    <script>
+  // Remove ?code=... from URL before Decap CMS initializes
+  if (window.location.search.includes('code=')) {
+    const newUrl = window.location.origin + window.location.pathname + window.location.hash;
+    window.history.replaceState({}, document.title, newUrl);
+  }
+</script>
     <script src="https://unpkg.com/decap-cms@3.0.12/dist/decap-cms.js"></script>
   </body>
 </html>
