--- a/admin/index.html
+++ b/admin/index.html
@@ -2,24 +2,25 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <meta http-equiv="Cache-Control" content="no-store" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Content Manager</title>
+    <script>
+      // --- Cleanup BEFORE CMS loads ---
+
+      // 1. Remove ?code= from URL
+      if (window.location.search.includes('code=')) {
+        const newUrl = window.location.origin + window.location.pathname + window.location.hash;
+        window.history.replaceState({}, document.title, newUrl);
+      }
+
+      // 2. Convert #/access_token to #access_token
+      if (window.location.hash.startsWith('#/access_token=')) {
+        window.location.hash = window.location.hash.replace('#/', '#');
+      }
+    </script>
   </head>
   <body>
-   <script>
-  // 1. Remove ?code= from URL
-  if (window.location.search.includes('code=')) {
-    const newUrl = window.location.origin + window.location.pathname + window.location.hash;
-    window.history.replaceState({}, document.title, newUrl);
-  }
-
-  // 2. Fix hash format (#/access_token → #access_token)
-  if (window.location.hash.startsWith('#/access_token=')) {
-    window.location.hash = window.location.hash.replace('#/', '#');
-  }
-</script>
-   
+    <!-- Load Decap CMS (version 3.0.12 for stability) -->
     <script src="https://unpkg.com/decap-cms@3.0.12/dist/decap-cms.js"></script>
   </body>
 </html>
