--- a/admin/index.html
+++ b/admin/index.html
@@ -15,7 +15,7 @@
 
       // 2. Convert #/access_token to #access_token
       if (window.location.hash.startsWith('#/access_token=')) {
-        window.location.hash = window.location.hash.replace('#/', '#');
+        window.location.hash = window.location.hash.replace('#/', '#'):
       }
     </script>
   </head>
