--- a/admin/index.html
+++ b/admin/index.html
@@ -6,6 +6,13 @@
     <title>Content Manager</title>
   </head>
   <body>
+    <!-- Load Decap CMS -->
     <script src="https://unpkg.com/decap-cms@3.0.12/dist/decap-cms.js"></script>
+
+    <!-- Optional: Custom preview templates or widgets -->
+    <script>
+      // Example placeholder for custom logic
+      // CMS.registerPreviewTemplate('posts', PostPreview);
+    </script>
   </body>
 </html>
