--- a/admin/index.html
+++ b/admin/index.html
@@ -6,11 +6,18 @@
     <title>Content Manager</title>
 
     <script>
-      // Fix malformed hash (#/access_token) before Decap initializes
-      if (window.location.hash.startsWith("#/access_token=")) {
-        const fixedHash = "#" + window.location.hash.substring(2);
-        history.replaceState(null, "", window.location.pathname + fixedHash);
+      function normalizeHash() {
+        if (window.location.hash.startsWith("#/access_token=")) {
+          const fixedHash = "#" + window.location.hash.substring(2);
+          history.replaceState(null, "", window.location.pathname + fixedHash);
+        }
       }
+
+      // Run fix on load
+      normalizeHash();
+
+      // Run fix again whenever hash changes (Decap router init)
+      window.addEventListener("hashchange", normalizeHash);
     </script>
   </head>
   <body>
