--- a/admin/index.html
+++ b/admin/index.html
@@ -6,7 +6,7 @@
     <title>Content Manager</title>
 
     <script>
-      // Fix malformed hash (#/access_token) without reload
+      // Fix malformed hash from Decap router
       if (window.location.hash.startsWith("#/access_token=")) {
         const fixedHash = "#" + window.location.hash.substring(2);
         history.replaceState(null, "", window.location.pathname + fixedHash);
@@ -14,10 +14,7 @@
     </script>
   </head>
   <body>
-    <!-- Mount point for Decap -->
     <div id="nc-root"></div>
-
-    <!-- Load Decap CMS after body is ready -->
     <script src="/admin/decap-cms.js"></script>
   </body>
 </html>
