--- a/admin/index.html
+++ b/admin/index.html
@@ -5,17 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Content Manager</title>
 
-    <script>
-  // Remove ?code=... from URL on page load
+   <script>
+  // Fix GitHub ?code param (just in case)
   if (window.location.search.includes("code=")) {
     const cleanUrl = window.location.origin + window.location.pathname + window.location.hash;
     window.history.replaceState({}, document.title, cleanUrl);
   }
 
-  // Fix malformed hash (#/access_token) if present
+  // Fix malformed hash #/access_token → #access_token
   if (window.location.hash.startsWith("#/access_token=")) {
     const fixedHash = "#" + window.location.hash.substring(2);
-    history.replaceState(null, "", window.location.pathname + fixedHash);
+    window.history.replaceState({}, document.title, window.location.pathname + fixedHash);
   }
 </script>
 
