--- a/admin/index.html
+++ b/admin/index.html
@@ -6,7 +6,6 @@
     <title>Content Manager</title>
 
     <script>
-      // Disable auto-init so we control auth and init
       window.CMS_MANUAL_INIT = true;
 
       // Clean ?code and #/access_token
@@ -19,7 +18,7 @@
         window.history.replaceState({}, document.title, window.location.pathname + fixedHash);
       }
 
-      // Manually extract and store token
+      // Store token manually
       (function storeToken() {
         const hash = window.location.hash.substring(1);
         const params = new URLSearchParams(hash);
@@ -40,12 +39,12 @@
   <body>
     <div id="nc-root"></div>
 
-    <!-- Load local Decap CMS build -->
     <script src="/admin/decap-cms.js"></script>
-
     <script>
-      // Initialize CMS manually after token storage
-      CMS.init();
+      // Explicitly pass config path when manually initializing
+      CMS.init({
+        config: "/admin/config.yml"
+      });
     </script>
   </body>
 </html>
